# GorurTengri

./: Cargo.toml  README.md
.cargo/: config.toml
gamelib/: Cargo.toml
gamelib/src/: lib.rs
gorur-tengri/: .gitignore  app.config.ts  package-lock.json  package.json  split-png-2-hdr.ps1
gorur-tengri/png2heightmap/: Cargo.toml
gorur-tengri/png2heightmap/src/: main.rs
gorur-tengri/src/: app.css  app.tsx  entry-server.tsx
gorur-tengri/src/components/: FPSCounter.tsx  GameCanvas.tsx  PauseScreen.tsx  PerfStats.tsx  WebGPUSupport.tsx  about.tsx
gorur-tengri/src/components/utility/: Menu.tsx
gorur-tengri/src/gamelib/: objects.ts  physics-general.ts
gorur-tengri/src/gamelib/characters/: player.ts
gorur-tengri/src/gamelib/eco/: lighting.ts  terrrain.ts
gorur-tengri/src/gamelib/eco/shaders/: genTerrainMesh.wgsl  genTerrainTex.wgsl  heightFunction.wgsl  terrain.wgsl  terrainFrag.wgsl
gorur-tengri/src/gamelib/eco/workers/: heightmapChunkWorker.ts
gorur-tengri/src/gamelib/utils/: computeHandler.ts  input.ts
gorur-tengri/src/routes/: index.tsx
gorurtengri/: Cargo.toml  Trunk.toml  index.html  index.scss  manifest.json
gorurtengri/assets/shaders/: map_generator.wgsl
gorurtengri/src/: main.rs
gorurtengri/src/characters/: player.rs
gorurtengri/src/eco/: eco.rs  mod.rs  terrain.rs
gorurtengri/src/testing/: justacube.rs
webmain/: Cargo.toml
winmain/: Cargo.toml
winmain/src/: main.rs
