[package]
name = "gorurtengri"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = [
    "dynamic_linking"#desktop
    #"webgpu"#web
] }
bevy_rapier3d = { version = "0.30.0", features = [ "simd-stable" ] }
rand = { version = "0.9.2" }
getrandom = { version = "0.3", features = ["wasm_js"] }
bevy-tnua-rapier3d = "0.12.0"
bevy-tnua = "0.24.0"
log = "0.4.28"
wasm-logger = "0.2.0"
bevy_dev_tools = "0.16.1"
bevy_atmosphere = "0.13.0"
